---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1040                                 -
---------------------------------------------
- 2020-10-24                                -
---------------------------------------------
.: WSM: Task: Settings Page (WSM-210)

---------------------------------------------
- 2020-10-18                                -
---------------------------------------------
.: WSM: Task: Store Page (WSM-209)

---------------------------------------------
- 2020-10-17                                -
---------------------------------------------
.: WSM: Task: Home Control Page (WSM-207)
.: WSM: Task: Tracking Page (WSM-208)

---------------------------------------------
- 2020-10-16                                -
---------------------------------------------
.: WSM: Task: Add social medias (WSM-203)
.: WSM: Task: Change the flow from home to store page (WSM-200)

---------------------------------------------
- 2020-10-11                                -
---------------------------------------------
.: WSM: Task: Home page (Update) (WSM-183)
.: WSM: Task: Revert Pricing page (WSM-186)

---------------------------------------------
- 2020-10-10                                -
---------------------------------------------
.: WSM: Task: Revert Ordering System (WSM-84)
.: WSM: Task: Revert Subscription Module (WSM-190)

---------------------------------------------
- 2020-10-07                                -
---------------------------------------------
.: WSM: Task: Change 'page' and 'shop' to store' (WSM-184)

---------------------------------------------
- 2020-10-04                                -
---------------------------------------------
.: WSM: Task: Payment Methods (WSM-189)
.: WSM: Task: Fix subscriptions flow (WSM-190)
.: WSM: Task: Billing Subscription Details Module (WSM-191)

---------------------------------------------