@@ -7,6 +7,7 @@
 - 2020-10-24                                -
 ---------------------------------------------
 .: WSM: Task: Settings Page (WSM-210)
+.: WSM: Task: Reduce shop entry details (WSM-188)
 
 ---------------------------------------------
 - 2020-10-18                                -
